--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="project.html" class="dropdown-item">Projects</a>
-                        <a href="feature.html" class="dropdown-item">Trainings</a>
+                        <a href="feature.html" class="dropdown-item">Features</a>
                         <a href="404.html" class="dropdown-item active">Events</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
