"Updated email address in contact.html from 'info@example.com' to 'clubindus@aiac.ma'"

--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h6>Mail Us</h6>
-                                    <span>info@example.com</span>
+                                    <span>clubindus@aiac.ma</span>
                                 </div>
                             </div>
                         </div>
