"Updated project-4 image and title from 'airport simulation' to 'solar tracker' in index.html and project.html"

--- a/project.html
+++ b/project.html
@@ -139,7 +139,7 @@
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-4.jpg" alt="">
                 <div class="project-title">
-                    <h5 class="text-primary mb-0">airport simulation </h5>
+                    <h5 class="text-primary mb-0">solar tracker </h5>
                 </div>
             </a>
             <a class="project-item" href="">
