"Updated 404.html to replace image with iframe and added new CSS styles for .page-header2 and .item1"

--- a/AKTIION.html
+++ b/AKTIION.html
@@ -97,9 +97,9 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header2 py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white animated slideInRight">Events</h1>
+            <h1 class="display-3 text-white animated slideInRight">AKTIION - International - Event</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb animated slideInRight mb-0">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -113,102 +113,7 @@
 
 
     <!-- events Start -->
-    <div class="news-container">
-        <div class="news-item">
-            <img src="img/JI6.jpg" alt="Image de nouvelle">
-            <h2>The 6th Industrial Day</h2>
-            <p>
-                The 6th Industrial Day, organized by the Industrial Club of the International Academy Mohammed VI of Civil Aviation (AIAC), 
-                <details>
-                    <summary>Show mor</summary>
-                    focuses on the theme of "The Challenges of Transitioning from Industry 2.0 to 4.0: A Path Toward a New Model of Local Development. Scheduled for April 15, 2020, this 6th edition will explore the evolution from traditional industrial practices to advanced, digitalized solutions that enhance local development. The event will take place at AIAC's campus in Nouaceur, within the Mohammed V Airport Technopole, inviting participants to discuss innovation in industry and the role of Industry 4.0 in economic and technological progress.
-                </details>
-        </div>
-        <div class="news-item">
-            <img src="img/JI5.jpg" alt="Image de nouvelle">
-            <h2>The 5th Industrial Day</h2>
-            <p>
-                The 5th Industrial Day, organized by the Club Indus at AIAC in 2019, focused on the theme "Ecosystems 4.0: A New Networked Form of Organization in the Digital Era."
-                <details>
-                    <summary>Show mor</summary>
-                    This event explored how the integration of digital technologies is reshaping industrial ecosystems, creating new, interconnected networks of collaboration and innovation. It highlighted how Industry 4.0 technologies, such as the Internet of Things (IoT), automation, and data analytics, are transforming traditional business structures into agile, adaptive ecosystems. The discussions underscored the importance of embracing these advancements to drive efficiency, foster collaboration, and ensure the sustainable growth of industries in Morocco.
-                </details>
-        </div>
-        <div class="news-item">
-            <img src="img/JI4.jpg" alt="Image de nouvelle">
-            <h2>The 4th Industrial Day</h2>
-            <p>
-                The 4th Industrial Day organized by the Club Indus at AIAC in 2018 was centered around the theme "Industry 4.0: The Digital Industrial Revolution for Economic Advancement." 
-                <details>
-                    <summary>Show mor</summary>
-                    This event explored how the digital transformation of industries—through technologies like automation, data exchange, and artificial intelligence—can boost economic growth. It emphasized the potential of Industry 4.0 to enhance productivity, streamline operations, and create innovative business models. The event provided a platform for discussing how Moroccan industries can leverage these advancements to stay competitive and contribute to the nation's economic development.
-                </details>
-            </p>
-        </div>
-        <div class="news-item">
-            <img src="img/JI1.jpg" alt="Image de nouvelle">
-            <h2>The 3rd Industrial Day</h2>
-            <p>
-                The 3rd Industrial Day organized by the Club Indus at AIAC in 2017 focused on the theme "Industrial 
-                Ecosystems: A Systemic Approach to Accelerate Sustainable Development." 
-                <details>
-                <summary>Show mor</summary>
-                This event highlighted the importance of viewing industries as interconnected ecosystems, where collaboration between 
-                 companies, suppliers, and institutions is key to fostering innovation and sustainability. 
-                 Discussions centered on optimizing resources, integrating clean technologies, and promoting circular economy 
-                 practices. The event aimed to showcase how Moroccan industries can not only achieve economic growth 
-                 but also play a crucial role in advancing sustainable development.
-                </details>
-            </p>
-        </div>
-        <div class="news-item">
-            <img src="img/aktion.jpg" alt="Image de nouvelle">
-            <h2>Aktion</h2>
-            <p> 
-
-                <details>
-                <summary>Show mor</summary>
-
-                </details>
-            </p>
-        </div>
-    </div>
-
-    <div class="gallery">
-        <div class="item1">
-            <iframe src="https://drive.google.com/file/d/1tPzh2BSJKJHt1p9x9dwYfPLrNq2VU6Ic/preview" width="640" height="480" allow="autoplay"></iframe>
-            <p></p>
-        </div>
-        <div class="item1">
-            <img src="img/imageAction.jpeg" alt="">
-            <p></p>
-        </div>
-        <div class="item1">
-            <img src="img/image2.jpeg" alt="">
-            <p></p>
-        </div>
-        <div class="item1">
-            <img src="img/image4.jpeg" alt="">
-            <p></p>
-        </div>
-        <div class="item1">
-            <img src="img/imageAktion.jpeg" alt="">
-            <p></p>
-        </div>
-    </div>
-
-    <div class="gallery">
-        <div class="item1">
-            <img src="img/image3.jpeg" alt="">
-            <p></p>
-        </div>
-        <div class="item1">
-            <img src="img/image7.jpg" alt="">
-            <p></p>
-        </div>
-
-    </div>
-
+    
     <!-- events End -->
         
 
