"Updated 404.html and AKTIION.html files with new content, images, and layout changes."

--- a/404.html
+++ b/404.html
@@ -163,22 +163,26 @@
         </div>
         <div class="news-item">
             <img src="img/aktion.jpg" alt="Image de nouvelle">
-            <h2>Aktion</h2>
-            <p> 
-
+            <h2><a href="">Aktion</a></h2>
+            <p>
                 <details>
                 <summary>Show mor</summary>
-
+                </details>
+            </p>
+        </div>
+        <div class="news-item">
+            <img src="img/ak2.jpg" alt="Image de nouvelle">
+            <h2><a href="AKTIION.html">Aktion-2024</a></h2>
+            <p>The AKTIION Conference 2024 was a three-day event dedicated to exploring innovative solutions to global challenges across various fields, including energy, technology, healthcare, and industry.
+                <details>
+                <summary>Show mor</summary>
+                It featured a blend of keynote speeches, technical sessions, and doctoral research presentations, providing a platform for knowledge exchange and collaboration. With a focus on sustainability, emerging technologies, and industrial advancements, the conference fostered discussions, networking opportunities, and cultural exchange, culminating in an enriching experience for all participants.
                 </details>
             </p>
         </div>
     </div>
 
     <div class="gallery">
-        <div class="item1">
-            <iframe src="https://drive.google.com/file/d/1tPzh2BSJKJHt1p9x9dwYfPLrNq2VU6Ic/preview" width="640" height="480" allow="autoplay"></iframe>
-            <p></p>
-        </div>
         <div class="item1">
             <img src="img/imageAction.jpeg" alt="">
             <p></p>
@@ -195,18 +199,10 @@
             <img src="img/imageAktion.jpeg" alt="">
             <p></p>
         </div>
-    </div>
-
-    <div class="gallery">
         <div class="item1">
-            <img src="img/image3.jpeg" alt="">
+            <img src="img/image5.jpeg" alt="">
             <p></p>
         </div>
-        <div class="item1">
-            <img src="img/image7.jpg" alt="">
-            <p></p>
-        </div>
-
     </div>
 
     <!-- events End -->
