`Added new project section with grid layout and carousel functionality`

--- a/index.html
+++ b/index.html
@@ -411,11 +411,55 @@
 
 
     <!-- Project Start -->
+    <section class="nos-projets">
+        <h1 class="display-5 mb-5">See What We Have Completed Recently</h1>
+        <div class="projets-container">
+          <div class="projet">
+            <img src="img/12.png" alt="Projet 2">
+          </div>
+          <div class="projet">
+            <img src="img/13.png" alt="Projet 2">
+          </div>
+          <div class="projet">
+            <img src="img/14.png" alt="Projet 2">
+          </div>
+          <div class="projet">
+            <img src="img/15.png" alt="Projet 2">
+          </div>
+        </div>
+      </section>
     <div class="container-fluid bg-dark pt-5 my-5 px-0">
         <div class="text-center mx-auto mt-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 600px;">
             <p class="fw-medium text-uppercase text-primary mb-2">Our Projects</p>
-            <h1 class="display-5 text-white mb-5">See What We Have Completed Recently</h1>
         </div>
+        <div class="owl-carousel project-carousel wow fadeIn" data-wow-delay="0.1s">
+            <a class="project-item" href="">
+                <img class="img-fluid" src="img/16.png" alt="">
+                <div class="project-title">
+                    <h5 class="text-primary mb-0">Line Follower</h5>
+                </div>
+            </a>
+            <a class="project-item" href="">
+                <img class="img-fluid" src="img/17.png" alt="">
+                <div class="project-title">
+                    <h5 class="text-primary mb-0">Obstacle Avoider</h5>
+                </div>
+            </a>
+            <a class="project-item" href="">
+                <img class="img-fluid" src="img/18.png" alt="">
+                <div class="project-title">
+                    <h5 class="text-primary mb-0">Obstacle Avoider</h5>
+                </div>
+            </a>
+            <a class="project-item" href="">
+                <img class="img-fluid" src="img/19.png" alt="">
+                <div class="project-title">
+                    <h5 class="text-primary mb-0">Agricultural Robot </h5>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="container-fluid bg-dark pt-5 my-5 px-0">
         <div class="owl-carousel project-carousel wow fadeIn" data-wow-delay="0.1s">
             <a class="project-item" href="">
                 <img class="img-fluid" src="img/project-1.jpg" alt="">
