`Refactor AKTIION.html, remove images, update responsive design and layout`

--- a/index.html
+++ b/index.html
@@ -415,13 +415,13 @@
         <h1 class="display-5 mb-5">See What We Have Completed Recently</h1>
         <div class="projets-container">
           <div class="projet">
-            <img src="img/12.png" alt="Projet 2">
+            <img src="img/12.jpg" alt="Projet 2">
           </div>
           <div class="projet">
-            <img src="img/13.png" alt="Projet 2">
+            <img src="img/13.jpg" alt="Projet 2">
           </div>
           <div class="projet">
-            <img src="img/14.png" alt="Projet 2">
+            <img src="img/14.jpg" alt="Projet 2">
           </div>
           <div class="projet">
             <img src="img/15.png" alt="Projet 2">
