`Added multiple keynote speakers to the AKTIION.html page`

--- a/AKTIION.html
+++ b/AKTIION.html
@@ -141,7 +141,8 @@
             <!-- Keynote speakers section -->
             <div class="container-fluid bg-dark pt-5 my-5 px-0">
                 <div class="text-center mx-auto mt-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="display-5 text-white mb-5">Keynote Speakers</h1>
+                    <p class="fw-medium text-uppercase text-primary mb-2"></p>
+                    <h1 class="display-5 text-white mb-5">Keynote Speakers </h1>
                 </div>
                 <div class="owl-carousel project-carousel wow fadeIn" data-wow-delay="0.1s">
                     <a class="project-item" href="">
@@ -150,9 +151,39 @@
                             <h5 class="text-primary mb-0">Mr Youssef Naimi</h5>
                         </div>
                     </a>
-                    <!-- Ajouter d'autres cartes ici -->
+                    <a class="project-item" href="">
+                        <img class="img-fluid" src="img/p2.jpg" alt="">
+                        <div class="project-title">
+                            <h5 class="text-primary mb-0">Mme Audrey Loridan-Baudrier</h5>
+                        </div>
+                    </a>
+                    <a class="project-item" href="">
+                        <img class="img-fluid" src="img/p1.jpg" alt="">
+                        <div class="project-title">
+                            <h5 class="text-primary mb-0">Mr Youssef Naimi</h5>
+                        </div>
+                    </a>
+                    <a class="project-item" href="">
+                        <img class="img-fluid" src="img/p4.jpg" alt="">
+                        <div class="project-title">
+                            <h5 class="text-primary mb-0">Mr Amin BENNOUNA</h5>
+                        </div>
+                    </a>
+                    <a class="project-item" href="">
+                        <img class="img-fluid" src="img/p5.jpg" alt="">
+                        <div class="project-title">
+                            <h5 class="text-primary mb-0">Youssef Naimi</h5>
+                        </div>
+                    </a>
+                    <a class="project-item" href="">
+                        <img class="img-fluid" src="img/p2.jpg" alt="">
+                        <div class="project-title">
+                            <h5 class="text-primary mb-0">Mme Audrey Loridan-Baudrier</h5>
+                        </div>
+                    </a>
                 </div>
             </div>
+            <section style="display: flex; align-items: flex-start; gap: 20px;">
     
             <!-- Dernière section -->
             <section class="content-section">
