--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="fw-medium text-uppercase text-primary mb-2">Why Choosing Us!</p>
                     <h1 class="display-5 mb-4">Few Reasons Why People Choosing Us!</h1>
-                    <p class="mb-4">Our club focuses on equipping students with hands-on skills in industrial automation, process optimization, and production engineering. We bridge the gap between theoretical knowledge and practical applications, ensuring that members are industry-ready.</p>
+                    <p class="mb-4">Industrial club AIAC focuses on equipping students with hands-on skills in industrial automation, process optimization, and production engineering. We bridge the gap between theoretical knowledge and practical applications, ensuring that members are industry-ready.</p>
                     <div class="row gy-4">
                         <div class="col-12">
                             <div class="d-flex">
