`Update meta tags in contact.html, index.html, and project.html with descriptions and keywords.`

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Industrial club AIAC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="description" content="Explore the innovative projects led by the AIAC Industrial Club in the field of industrial engineering and technology.">
+
 
     <!-- OneSignal -->
     <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
