--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <title>Industrial club AIAC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="description" content="Discover the AIAC Industrial Club: a space for innovation and training for industrial engineering students.">
+    <meta name="keywords" content="industrial club, AIAC, industry, industrial engineering, innovation, training">
+    <meta name="author" content="AIAC Industrial Club">
 
     <!-- OneSignal -->
     <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
