--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <div ><img class="logo" src="img/logojdid.png"></div>
+            <div ><img class="logo" src="img/logojdid.png" alt="Logo"></div>
             <h1 class="text-white m-0">ClubIndus-AIAC</h1>
             
         </a>
@@ -169,10 +169,10 @@
                 <div class="col-lg-6">
                     <div class="row gx-3 h-100">
                         <div class="col-6 align-self-start wow fadeInUp" data-wow-delay="0.1s">
-                            <img class="img-fluid" src="img/logo.png">
+                            <img class="img-fluid" src="img/logo.png" alt="club industriel aiac">
                         </div>
                         <div class="col-6 align-self-end wow fadeInDown" data-wow-delay="0.1s">
-                            <img class="img-fluid" src="img/about-1.jpg">
+                            <img class="img-fluid" src="img/about-1.jpg" alt="club industriel aiac">
                         </div>
                     </div>
                 </div>
