--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Industrial club AIAC</title>
+    <title>club indus AIAC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="Discover the AIAC Industrial Club: a space for innovation and training for industrial engineering students.">
     <meta name="keywords" content="club indus aiac, indus aiac, Académie Internationale Mohammed VI de l'Aviation Civile, club indus AIAC, indus AIAC, industrial club, AIAC, industry, industrial engineering, innovation, training">
