`Added schema.org JSON-LD+LD script to index.html for organization metadata`

--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
     <meta name="keywords" content="club indus aiac, indus aiac, Académie Internationale Mohammed VI de l'Aviation Civile, club indus AIAC, indus AIAC, industrial club, AIAC, industry, industrial engineering, innovation, training">
     <meta name="author" content="AIAC Industrial Club">
 
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "AIAC Industrial Club",
+          "url": "https://indus-aiac.com",
+          "logo": "https://indus-aiac.com/logo.png",
+          "description": "Discover the AIAC Industrial Club: a space for innovation and training for industrial engineering students.",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "AIAC Campus",
+            "addressLocality": "Casablanca",
+            "addressRegion": "Grand Casablanca",
+            "postalCode": "20000",
+            "addressCountry": "MA"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+212 6 96082980",
+            "contactType": "Customer Service",
+            "email": "clubindus@aiac.com"
+          },
+          "sameAs": [
+            "https://www.facebook.com/ClubIndustrielAIAC/",
+            "https://www.linkedin.com/company/club-industriel-aiac/"
+          ]
+        }
+        </script>
+        
+
     <!-- OneSignal -->
     <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
