`Added two JSON schema scripts to index.html`

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         {
           "@context": "https://schema.org",
           "@type": "Organization",
+          "name": "Club Indus AIAC",
+          "alternateName": "AIAC Industrial Club",
+          "url": "https://indus-aiac.com",
+          "description": "Le Club Indus AIAC est un espace pour promouvoir l'innovation et la formation dans le domaine de l'ingénierie industrielle.",
+          "logo": "https://indus-aiac.com/logo.png"
+        }
+        </script>
+        
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
           "name": "AIAC Industrial Club",
           "url": "https://indus-aiac.com",
           "logo": "https://indus-aiac.com/logo.png",
