`Update title in multiple HTML files from "Industrial club AIAC" to "club indus AIAC"`

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Industrial club AIAC</title>
+    <title>club indus AIAC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="Explore the innovative projects led by the AIAC Industrial Club in the field of industrial engineering and technology.">
 
