--- a/testimonial.html
+++ b/testimonial.html
@@ -66,7 +66,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
             <div ><img class="logo" src="img/logojdid.png"></div>
-            <h1 class="text-white m-0">ClubIndus-AIAC</h1>
+            <h1 class="text-white m-0">Club Indus AIAC</h1>
             
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
