--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <div ><img class="logo" src="img/logojdid.png" alt="Logo"></div>
+            <div ><img class="logo" src="img/logojdid.png" alt="club indus aiac"></div>
             <h1 class="text-white m-0">Club Indus AIAC</h1>
             
         </a>
