--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://www.instagram.com/clubindusaiac/" class="btn btn-primary px-3 d-none d-lg-block" id="followButton">Follow</a>
+            <a href="https://drive.google.com/drive/folders/1ClsOi8LHiQt3V9qIjolH7dqTRjQTowF9?usp=drive_link" class="btn btn-primary px-3 d-none d-lg-block" id="followButton">Follow</a>
             
         </div>
     </nav>
